<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_home_text" />
        <item
            android:id="@+id/nav_destinos"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_destinos_text" />
        <item
            android:id="@+id/nav_recomendaciones"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_recomendaciones_tex" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_mapa_text" />
        <item
            android:id="@+id/nav_sobreNosotros"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_sobreNosotros_text" />
    </group>
</menu>