<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/viewSobreNosotros"
    tools:context=".ui.sobrenosotros.SobreNosotrosFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clipChildren="false">

        <TextView
            android:id="@+id/tvSobreNosotrosTitulo"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/sobreNosotrosTitulo"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationY="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/tvSobreNosotrosSub1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/sobreNosotrosSub1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:translationY="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSobreNosotrosTitulo"
            app:layout_constraintVertical_bias="0.065" />

        <TextView
            android:id="@+id/tvSobreNosotrosAtributosE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/sobreNosotrosAtributosE1"
            android:textSize="18sp"
            android:translationY="170dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSobreNosotrosTitulo"
            app:layout_constraintVertical_bias="0.21" />

        <TextView
            android:id="@+id/tvSobreNosotrosSub2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/sobreNosotrosSub2"
            android:textSize="24sp"
            android:textStyle="bold"
            android:translationY="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSobreNosotrosTitulo"
            app:layout_constraintVertical_bias="0.406" />

        <TextView
            android:id="@+id/tvSobreNosotrosAtributosC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/sobreNosotrosAtributosE2"
            android:textSize="18sp"
            android:translationY="370dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSobreNosotrosTitulo"
            app:layout_constraintVertical_bias="0.562" />

        <TextView
            android:id="@+id/tvSobreNosotrosParrafo"
            android:layout_width="314dp"
            android:layout_height="175dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/sobreNosotrosParrafo"
            android:textSize="18sp"
            android:translationY="510dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSobreNosotrosTitulo"
            app:layout_constraintVertical_bias="0.936" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>