<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewRecomendaciones"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvUbicacionR"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_horizontal"
            android:text="@string/tvUbiacionR"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <Spinner
            android:id="@+id/spinnerUbicaciones"
            android:layout_width="275dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tvClassEdadR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUbicacionR"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/tvClassEdadR"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_horizontal"
            android:text="@string/tvClassEdadR"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <Spinner
            android:id="@+id/spinnerClassEdad"
            android:layout_width="275dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tvPrecioR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvClassEdadR"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tvPrecioR"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_horizontal"
            android:text="@string/tvPreciosR"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <Spinner
            android:id="@+id/spinnerPrecios"
            android:layout_width="275dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tvCapacidadR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrecioR"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tvCapacidadR"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_horizontal"
            android:text="@string/tvCapacidadR"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Spinner
            android:id="@+id/spinnerCapacidad"
            android:layout_width="275dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tvFailidadR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCapacidadR"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tvFailidadR"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_horizontal"
            android:text="@string/tvFacilidadesR"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65" />

        <Spinner
            android:id="@+id/spinnerFacilidades"
            android:layout_width="275dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvActividadPrincipalR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFailidadR"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tvActividadPrincipalR"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_horizontal"
            android:text="@string/tvActividadPrincipalR"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.76" />

        <Spinner
            android:id="@+id/spinnerActividadPrincipal"
            android:layout_width="275dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvActividadPrincipalR"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnBuscarR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:onClick="accionBuscarR"
            android:text="Buscar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerActividadPrincipal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRecomendados"
            android:layout_width="match_parent"
            android:layout_height="975dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBuscarR" />

    </LinearLayout >
</ScrollView>
